--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,39 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  margin-top: 25vh;
+  height: 40vh;
+  background-color: pink;
+  width: 20vw;
+  margin-left: 40vw;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.input {
+  margin-top: 15px;
+  height: 24px;
+  width: 7.5vw;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  border: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  height: 24px;
+  width: 7.5vw;
+  border-radius: 5px;
+  border: 0px;
+  margin-bottom: 15px;
+}
+
+.button:hover {
+  cursor: pointer;
 }
